--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-name: Matej Pribis, personal webpage
-markdown: kramdown
-
-remote_theme: pribism/flex
+name: Flex
+markdown: redcarpet
+pygments: true
